# djinni-android-example

./: .gitmodules  run_djinni.sh
DjinniExample/: settings.gradle
DjinniExample/app/: build.gradle
DjinniExample/app/src/androidTest/java/com/ihat/djinniexample/: ExampleInstrumentedTest.java
DjinniExample/app/src/djinni/idl/: greeting.djinni
DjinniExample/app/src/main/: AndroidManifest.xml
DjinniExample/app/src/main/cpp/: CMakeLists.txt  greeting_service_impl.cpp  greeting_service_impl.h  native-lib.cpp
DjinniExample/app/src/main/java/com/ihat/djinniexample/: MainActivity.java
DjinniExample/app/src/main/res/values/: strings.xml  themes.xml
DjinniExample/app/src/main/res/values-night/: themes.xml
DjinniExample/app/src/test/java/com/ihat/djinniexample/: ExampleUnitTest.java
DjinniExample/gradle/wrapper/: gradle-wrapper.properties
